--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,58 @@
-<!doctype html>
-<html>
-<head lang="en">
-    <title>This for That</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="./css/base.css">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#000000">
+  <!--
+      manifest.json provides metadata used when your web app is added to the
+      homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
+
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+  <title>React App</title>
+  <link rel="stylesheet" type="text/css" href="./css/base.css">
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
-<body>
 
-<article id="layout">
+<body id="layout">
+  <noscript>
+    You need to enable JavaScript to run this app.
+  </noscript>
 
-    <header id="header">
-        <h1 class="heading">
-            <strong>This</strong>
-            <em class="separator">for</em>
-            <strong>That</strong>
-        </h1>
+  <header id="header">
+    <h1 class="heading">
+      <strong>This</strong>
+      <em class="separator">for</em>
+      <strong>That</strong>
+    </h1>
 
-        <p class="intro">
-            Do you have a second to spare?<br>Let me tell you my website idea.
-        </p>
-    </header>
+    <p class="intro">
+      Do you have a second to spare?<br>Let me tell you my website idea.
+    </p>
+  </header>
 
-    <section id="application"></section>
+  <div id="root"></div>
+  <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
 
-</article>
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
 
-<script src="./js/app.js"></script>
-
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
 </body>
+
 </html>
